--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>베니</title>
+        <link rel = "icon" href = "image/profile.png">
         <!-- CSS -->
         <link rel = "stylesheet" href = "main.css">
         <!-- JS -->
